add distinct project names